[gd_scene load_steps=7 format=2]

[ext_resource path="res://TabScreens/QueryBuilder/QueryBuilder.gd" type="Script" id=1]
[ext_resource path="res://TabScreens/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://TabScreens/QueryBuilder/Components/EventTypes.tscn" type="PackedScene" id=3]
[ext_resource path="res://TabScreens/QueryBuilder/Components/EventFields.tscn" type="PackedScene" id=4]
[ext_resource path="res://TabScreens/QueryBuilder/Components/VisualRules.tscn" type="PackedScene" id=5]
[ext_resource path="res://TabScreens/QueryBuilder/Components/PopupResultsDetail.tscn" type="PackedScene" id=6]

[node name="QueryBuilder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
margin_right = 506.0
margin_bottom = 600.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
tab_align = 0

[node name="SavedViews" type="Tabs" parent="HBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 33.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxViews" type="VBoxContainer" parent="HBoxContainer/TabContainer/SavedViews"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavedViewsList" type="ItemList" parent="HBoxContainer/TabContainer/SavedViews/VBoxViews"]
margin_right = 498.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Add new", null, false ]
same_column_width = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="HBoxContainer/TabContainer/SavedViews/VBoxViews/SavedViewsList"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.389
margin_top = -30.0
margin_right = 124.611
margin_bottom = 30.0
rect_min_size = Vector2( 150, 52.5 )
dialog_text = "Are you sure you want to delete this view?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TabContainer/SavedViews/VBoxViews"]
margin_top = 538.0
margin_right = 498.0
margin_bottom = 563.0

[node name="TbViewTitle" type="LineEdit" parent="HBoxContainer/TabContainer/SavedViews/VBoxViews/HBoxContainer"]
margin_right = 406.0
margin_bottom = 25.0
size_flags_horizontal = 3
placeholder_text = "Add new view"

[node name="BtEdit" type="Button" parent="HBoxContainer/TabContainer/SavedViews/VBoxViews/HBoxContainer"]
margin_left = 410.0
margin_right = 444.0
margin_bottom = 25.0
text = "Edit"

[node name="BtDelete" type="Button" parent="HBoxContainer/TabContainer/SavedViews/VBoxViews/HBoxContainer"]
margin_left = 448.0
margin_right = 498.0
margin_bottom = 25.0
text = "Delete"

[node name="EventTypes" parent="HBoxContainer/TabContainer" instance=ExtResource( 3 )]
visible = false

[node name="EventFields" parent="HBoxContainer/TabContainer" instance=ExtResource( 4 )]
visible = false

[node name="VisualRules" parent="HBoxContainer/TabContainer" instance=ExtResource( 5 )]
visible = false

[node name="QueryView" type="Tabs" parent="HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 33.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ResultingQuery" type="TextEdit" parent="HBoxContainer/TabContainer/QueryView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -27.0
rect_min_size = Vector2( 0, 250 )
size_flags_vertical = 3
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtApplySql" type="Button" parent="HBoxContainer/TabContainer/QueryView"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -21.0
text = "Apply changes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultsTable" type="Tree" parent="HBoxContainer"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true

[node name="PopupResultsDetail" parent="HBoxContainer/ResultsTable" instance=ExtResource( 6 )]
anchor_left = 0.253
anchor_top = 0.112
anchor_right = 0.749
anchor_bottom = 0.895
margin_left = -0.0180054
margin_top = -0.200005
margin_right = 0.00598145
margin_bottom = 0.0

[node name="PopupVisualRules" type="PopupMenu" parent="HBoxContainer/ResultsTable"]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Add new address", null, 0, false, false, 0, 0, null, "", false ]

[connection signal="item_activated" from="HBoxContainer/TabContainer/SavedViews/VBoxViews/SavedViewsList" to="." method="_on_SavedViewsList_item_activated"]
[connection signal="item_selected" from="HBoxContainer/TabContainer/SavedViews/VBoxViews/SavedViewsList" to="." method="_on_SavedViewsList_item_selected"]
[connection signal="confirmed" from="HBoxContainer/TabContainer/SavedViews/VBoxViews/SavedViewsList/DeleteConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="text_entered" from="HBoxContainer/TabContainer/SavedViews/VBoxViews/HBoxContainer/TbViewTitle" to="." method="_on_TbViewTitle_text_entered"]
[connection signal="pressed" from="HBoxContainer/TabContainer/SavedViews/VBoxViews/HBoxContainer/BtEdit" to="." method="_on_BtEdit_pressed"]
[connection signal="pressed" from="HBoxContainer/TabContainer/SavedViews/VBoxViews/HBoxContainer/BtDelete" to="." method="_on_BtDelete_pressed"]
[connection signal="event_type_selected" from="HBoxContainer/TabContainer/EventTypes" to="." method="_on_EventTypes_event_type_selected"]
[connection signal="clear_all" from="HBoxContainer/TabContainer/EventFields" to="." method="_on_EventFields_clear_all"]
[connection signal="query_changed" from="HBoxContainer/TabContainer/EventFields" to="." method="_on_EventFields_query_changed"]
[connection signal="config_changed" from="HBoxContainer/TabContainer/VisualRules" to="." method="_on_VisualRules_config_changed"]
[connection signal="pressed" from="HBoxContainer/TabContainer/QueryView/BtApplySql" to="." method="_on_BtApplySql_pressed"]
[connection signal="gui_input" from="HBoxContainer/ResultsTable" to="." method="_on_ResultsTable_gui_input"]
[connection signal="item_activated" from="HBoxContainer/ResultsTable" to="." method="_on_ResultsTable_item_activated"]
[connection signal="item_rmb_selected" from="HBoxContainer/ResultsTable" to="." method="_on_ResultsTable_item_rmb_selected"]
[connection signal="field_selected" from="HBoxContainer/ResultsTable/PopupResultsDetail" to="." method="_on_PopupResultsDetail_field_selected"]
[connection signal="id_pressed" from="HBoxContainer/ResultsTable/PopupVisualRules" to="." method="_on_PopupVisualRules_id_pressed"]
